add badges, check spelling, add code of conduct

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,17 +16,30 @@ knitr::opts_chunk$set(
 # heck
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/DyfanJones/heck/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/DyfanJones/heck/actions/workflows/R-CMD-check.yaml)
+[![heck status badge](https://dyfanjones.r-universe.dev/badges/heck)](https://dyfanjones.r-universe.dev/heck)
+[![Codecov test coverage](https://codecov.io/gh/DyfanJones/heck/branch/master/graph/badge.svg)](https://app.codecov.io/gh/DyfanJones/heck?branch=master)
 <!-- badges: end -->
 
-This repo was developed from the excellent tutorial https://extendr.github.io/user-guide/heckin-case-converter.html. This package is a thin wrapper around the rust crate [heck](https://crates.io/crates/heck) allowing R to convert character vectors to specific cases super fast.
+This repository was developed from the excellent tutorial https://extendr.github.io/user-guide/heckin-case-converter.html. This package is a thin wrapper around the rust crate [heck](https://crates.io/crates/heck) allowing `R` to convert character vectors to specific cases super fast.
 
 ## Installation
 
-You can install the development version of heck like so:
+You can install the development version of `heck` like so:
 
+r-universe:
+```r
+install.packages("heck", repos = c("https://dyfanjones.r-universe.dev", "https://cran.r-project.org"))
+```
+
+Github:
 ``` r
 remotes::install_github("dyfanjones/heck")
 ```
+
+## Code of Conduct
+  
+Please note that the `R` `heck` project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/1/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
 
 ## Example
 
@@ -56,5 +69,3 @@ to_shouty_kebab_case(x)
 
 to_shouty_snake_case(x)
 ```
-
-**NOTE:** This repo was created to help me learn how R and Rust work together.
